--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,3 +62,8 @@
   content: '';
   @apply w-full absolute top-0 left-0 h-32 bg-background rounded-bl-[] rounded-br-[75%];
 }
+
+.track-hero__background {
+  background-color: #310e68;
+  background-image: linear-gradient(316deg, #310e68 0%, #5f0f40 74%);
+}
